--- a/mainStyle.scss
+++ b/mainStyle.scss
@@ -24,20 +24,15 @@
   margin: auto;
 }
 
-// HEADER
-// .transition-fade {
-//   opacity: 1;
-//   transition: 0.5s;
-//   transform: translateX(0);
-//   transform-origin: left;
-// }
-
 html {
   scroll-behavior: smooth;
 }
 
 body {
   overflow-x: hidden;
+}
+header {
+  overflow-y: hidden;
 }
 
 .preload * {
@@ -148,7 +143,7 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url(material/resize/entry.jpg);
+  background: url(material/resize/lclclc.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 15%;
@@ -212,7 +207,7 @@ body {
   }
 
   .nav__items {
-    padding-right: 2rem;
+    padding-right: 1.7rem;
   }
 
   .nav__link {
@@ -252,12 +247,13 @@ body {
   .nav__toggle {
     z-index: 3;
     position: fixed;
-    bottom: 1.5rem;
+    top: 1.5rem;
     right: 1.5rem;
-    font-size: 1.5rem;
+    font-size: 2rem;
     display: none;
     cursor: pointer;
   }
+
   .nav__list--links {
     @extend %flexCenter;
     flex: 1;
@@ -314,12 +310,17 @@ body {
 
   background-color: $secondColorLight;
 }
-
+#reservation {
+  clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 calc(100% - 5vh));
+  margin-bottom: -5vh;
+}
 .reservation__container {
   text-align: center;
   padding: 0rem 2rem;
   line-height: 1.5;
   max-width: 900px;
+
+  position: relative;
 }
 .section__title {
   font-size: 24px;
@@ -393,20 +394,28 @@ body {
   position: relative;
 }
 .btn {
-  background-color: $secondColorLight;
-  border: 1px solid $secondColorDark;
+  text-align: center;
+  display: block;
+  margin: auto;
+  letter-spacing: 1px;
+  background-color: $mainColor;
+  color: $secondColorLight;
   border-radius: 10px;
-  color: $mainColor;
   padding: 10px 20px;
-}
-.btn__download {
-  margin: 5rem 0rem 0rem;
   font-weight: 600;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
     rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  border-radius: 10px;
+}
+.btn__download {
+  border: none;
+  margin: 5rem 0rem 0rem;
+  font-weight: 600;
+
   &:hover {
-    background-color: $secondColorDark;
-    color: $activeColor;
+    background: $secondColorLight;
+
+    color: $mainColor;
   }
   &:active {
     transform: scale(0.98);
@@ -754,6 +763,8 @@ body {
 /////////////////////////// SUBSCRIBE
 .subscribe {
   background: $secondColorDark;
+  clip-path: polygon(0 0, 100% 0, 100% calc(100% - 5vh), 0 100%);
+  margin-bottom: -5vh;
 }
 
 .subscribe__container {
@@ -799,22 +810,11 @@ body {
   }
   .subscribe__btn {
     width: 130px;
-    text-align: center;
-    display: block;
-    margin: auto;
-    letter-spacing: 1px;
-    background-color: $mainColor;
-    color: $secondColorLight;
-    border-radius: 10px;
-    padding: 15px 0;
-    font-weight: 600;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
-      rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
     &:hover {
       background: $secondColorLight;
       border: 1px solid $mainColor;
       color: $mainColor;
-      padding: 14px 0;
+      padding: 9px 0;
     }
     &:active {
       transform: scale(0.98);
@@ -878,6 +878,12 @@ body {
   }
 }
 @media screen and (max-width: 990px) {
+  .header {
+    background: url(material/resize/lclclc.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    overflow-x: hidden;
+  }
   @keyframes cloud {
     0% {
       opacity: 0;
@@ -983,16 +989,6 @@ body {
 }
 
 @media screen and (max-width: 500px) {
-  .header {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    background: url(material/resize/entry.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-
-    overflow-x: hidden;
-  }
   .operation__field {
     .operation__meal {
       max-width: 250px;
