--- a/style/nullstyle.scss
+++ b/style/nullstyle.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Montaga&display=swap');
+
 *,
 *::before,
 *::after {
@@ -25,6 +27,7 @@ ol {
 }
 a {
   text-decoration: none;
+  font-family: 'Montaga', serif;
 }
 img,
 video {
@@ -36,7 +39,7 @@ input,
 button,
 textarea,
 select {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montaga', serif;
 }
 
 button {
