--- a/style/styleCarts.css
+++ b/style/styleCarts.css
@@ -2115,4 +2115,34 @@ button {
     right: 4%;
   }
 }
+
+@media screen and (max-width: 414px) {
+  .container-cart {
+    bottom: 15%;
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .container-cart {
+    bottom: 15%;
+    width: 95%;
+  }
+  .container-cart img {
+    width: 75px;
+    padding-right: 0.5rem;
+  }
+  .item-cart {
+    float: left;
+  }
+  .item-cart .item-info {
+    max-width: 150px;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .container-cart {
+    bottom: 19%;
+  }
+}
 /*# sourceMappingURL=styleCarts.css.map */
