--- a/mainStyle.css
+++ b/mainStyle.css
@@ -259,9 +259,14 @@ button {
 
 .footer-wrap .footer__info,
 .footer-wrap .footer__socials {
-  -ms-flex-preferred-size: 25%;
-      flex-basis: 25%;
+  -ms-flex-preferred-size: 22%;
+      flex-basis: 22%;
   padding: 20px;
+}
+
+.footer-wrap .footer__info iframe,
+.footer-wrap .footer__socials iframe {
+  margin-top: 1rem;
 }
 
 .footer__items {
@@ -324,6 +329,40 @@ button {
 .footer__contact--black {
   font-size: 20px;
   padding-bottom: 1rem;
+}
+
+@media screen and (max-width: 1300px) {
+  .footer-wrap .footer__info,
+  .footer-wrap .footer__socials {
+    -ms-flex-preferred-size: 42%;
+        flex-basis: 42%;
+    margin: 2rem auto auto;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer-wrap {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer-wrap .footer__info,
+  .footer-wrap .footer__socials {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    padding: 15px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer-wrap {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer-wrap .footer__info iframe {
+    width: 100%;
+  }
 }
 
 .navbar__container .nav__list, .navbar__container .nav__list--links, .iframe__container {
@@ -932,6 +971,15 @@ header {
   margin: 1rem auto 6rem;
 }
 
+.operation__field .operation__meal {
+  border-radius: 5px;
+}
+
+.operation__field .operation__meal img {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
 .operation__field .operation__meal:nth-of-type(odd) {
   -webkit-animation: fadeIn 0.8s;
           animation: fadeIn 0.8s;
@@ -1157,6 +1205,8 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .footer .section__img .footer__logo--home {
@@ -1179,9 +1229,14 @@ header {
 
 .footer-wrap .footer__info,
 .footer-wrap .footer__socials {
-  -ms-flex-preferred-size: 25%;
-      flex-basis: 25%;
+  -ms-flex-preferred-size: 22%;
+      flex-basis: 22%;
   padding: 20px;
+}
+
+.footer-wrap .footer__info iframe,
+.footer-wrap .footer__socials iframe {
+  margin-top: 1rem;
 }
 
 .footer__items {
@@ -1349,7 +1404,6 @@ header {
   content: '';
   position: absolute;
   bottom: 0;
-  left: 0;
   height: 100%;
   width: 100%;
   opacity: 0.4;
@@ -1383,6 +1437,13 @@ header {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .footer-wrap .footer__info,
+  .footer-wrap .footer__socials {
+    -ms-flex-preferred-size: 42%;
+        flex-basis: 42%;
+    margin-top: 2rem;
+    margin-right: 0.5rem;
   }
 }
 
