--- a/style/styleEvent.css
+++ b/style/styleEvent.css
@@ -2,8 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Montaga&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Montaga&display=swap");
 .navbar__container .nav__list, .navbar__container .nav__list--links, .iframe__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -60,6 +62,7 @@ ol {
 
 a {
   text-decoration: none;
+  font-family: 'Montaga', serif;
 }
 
 img,
@@ -73,7 +76,7 @@ input,
 button,
 textarea,
 select {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montaga', serif;
 }
 
 button {
@@ -861,7 +864,9 @@ header {
 
 .btn__download:hover {
   background: gainsboro;
+  border: 1px solid #9e1527;
   color: #9e1527;
+  padding: 9px 19px;
 }
 
 .btn__download:active {
@@ -1739,19 +1744,30 @@ header {
     max-width: 300px;
   }
   .promotion {
-    height: 90%;
+    max-height: 85vh;
+    max-width: 95%;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .promotion {
-    height: 90%;
-  }
   .promotion .promo__header {
     font-size: 1.5rem;
   }
   .promotion .banner {
-    padding: 1rem;
+    padding: 0.5rem;
+    width: 300px;
+    max-height: 90vh;
+  }
+  .promotion .banner .promo__header {
+    padding-top: 2rem;
+    font-size: 24px;
+  }
+  .promotion .banner .promo__subheader {
+    padding: 0.5rem 0 1rem;
+  }
+  .promotion .banner .promo__content {
+    margin: 1rem auto;
+    max-width: 300px;
   }
   .promotion .subscribe {
     height: 90%;
@@ -1796,6 +1812,7 @@ ol {
 
 a {
   text-decoration: none;
+  font-family: 'Montaga', serif;
 }
 
 img,
@@ -1809,7 +1826,7 @@ input,
 button,
 textarea,
 select {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montaga', serif;
 }
 
 button {
