--- a/mainStyle.scss
+++ b/mainStyle.scss
@@ -810,6 +810,7 @@ header {
       content: '';
       position: absolute;
       bottom: 0;
+      left: 0;
       height: 100%;
       width: 100%;
       opacity: 0.4;
